<resources>

    <string name="app_name">DemoApplications</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TestActivity -->
    <string name="title_text_activity">Test Activity Alt</string>
    <string name="remote_service_connected">Test: Remote Service connected</string>
    <string name="remote_service_disconnected">Test: Remote Service disconnected</string>
    <string name="settings_text">Text</string>
    <string name="send">Send</string>
    <string name="sendImage">Send Image</string>
    
    <!-- TestActivity2 -->
    <string name="title_text_activity2">BIPS Test Activity</string>
    <string name="service_button_text">Connect to BIPS</string>
    <string name="duration_text">Duration (ms)</string>
    <string name="image_heading_text">What image to use?</string>
    <string name="radio_up_text">Up arrow</string>
    <string name="radio_down_text">Down arrow</string>
    <string name="radio_left_text">Left arrow</string>
    <string name="radio_right_text">Right arrow</string>
    <string name="priority_heading_text">Priority</string>
    <string name="lowest_text">Lowest</string>
    <string name="low_text">Low</string>
    <string name="medium_text">Medium</string>
    <string name="high_text">High</string>
    <string name="highest_text">Highest</string>
    <string name="send_button_text">Send image</string>
    <string name="send_cancel_text">Cancel current image</string>
    <string name="send_cancel_all_text">Cancel all queued</string>
</resources>