<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:scrollbars="none" >

    <TableLayout
        android:id="@+id/TableView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_button_text" />

            <TextView
                android:id="@+id/textView_callback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration_text" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="number" 
                android:text="@string/default_time" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_heading_text" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radio_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_up_text" />

                <RadioButton
                    android:id="@+id/radio_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_down_text" />

                <RadioButton
                    android:id="@+id/radio_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_left_text" />

                <RadioButton
                    android:id="@+id/radio_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_right_text" />
            </RadioGroup>
        </TableRow>


        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_send_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_button_text" />

            <Button
                android:id="@+id/button_cancel_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_cancel_text" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_cancel_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_cancel_all_text" />
            <Button
                android:id="@+id/button_periodic_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
        </TableRow>
    </TableLayout>

</ScrollView>