<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:text="@string/settings_text" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send" />

    <Button
        android:id="@+id/button_send_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendImage" />

    <Button
        android:id="@+id/button_send_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendImage" />
    
    <Button
        android:id="@+id/button_send_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendImage" />
    
    <Button
        android:id="@+id/button_send_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendImage" />
    
</LinearLayout>